Ajout de "bonjour"

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
    <header></header>
    <main>
        <p>Raleway <i class="fab fa-affiliatetheme"></i></p>
+       <p> bonjour </p>
    </main>
    <footer></footer>
 </body>
